deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-its-ingress
  namespace: saas-its
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1/health
        pathType: Prefix
        backend:
          service:
            name: identity-svc
            port:
              number: 3000
      - path: /v1/auth
        pathType: Prefix
        backend:
          service:
            name: identity-svc
            port:
              number: 3000
      - path: /v1/users
        pathType: Prefix
        backend:
          service:
            name: identity-svc
            port:
              number: 3000
      - path: /v1/tickets
        pathType: Prefix
        backend:
          service:
            name: ticket-svc
            port:
              number: 3002
      - path: /v1/assets
        pathType: Prefix
        backend:
          service:
            name: asset-svc
            port:
              number: 3003
      - path: /v1/analytics
        pathType: Prefix
        backend:
          service:
            name: asset-svc
            port:
              number: 3003
      - path: /v1/reservations
        pathType: Prefix
        backend:
          service:
            name: reservation-svc
            port:
              number: 5003
